plugins {
	id 'org.springframework.boot' version '3.2.2'
    id 'java'
    id 'antlr'
}

group 'a2geek.ghost'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    antlr "org.antlr:antlr4:4.13.1"
    implementation "org.antlr:antlr4-runtime:4.13.1"
    implementation 'info.picocli:picocli:4.7.5'
    implementation "net.sf.applecommander:applesingle-api:1.2.2"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.1"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    doFirst {
        // Embed building of interpreter
        exec {
            workingDir "src/main/asm"
            commandLine "make"
        }
    }
    main.java.srcDirs += "${project.buildDir}/generated-src/antlr/main"
}

generateGrammarSource {
    arguments += ["-visitor"]
}

test {
    useJUnitPlatform()
}

bootJar {
    mainClass = 'a2geek.ghost.Main'
    archiveBaseName = 'GhostBasic'
    manifest {
        attributes 'Implementation-Title': "GhostBasic 'gbas'",
                    'Implementation-Version': archiveVersion
    }
}
